--- a/MyAPP/appsettings.json
+++ b/MyAPP/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "profiles": {
-    "Windows Machine": {
-      "commandName": "MsixPackage",
-      "nativeDebugging": false
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "ConnectionStrings": {
@@ -10,4 +10,5 @@
 
   },
   "DetailedErrors": true
+
 }
